--- a/Lasso_regression.ipynb
+++ b/Lasso_regression.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 9 Lasso Regression\n",
+    "# Lasso Regression\n",
     "\n",
     "Write code for learning using Lasso Regression and give your conclusions. Use the dataset LassoReg_data.npz for this question. The file contains two matrices of size 120\\*1000 and 120\\*1, corresponding to 120 instance points with 1000 dimensional features and its targets.\n",
     "\n",
